--- a/docs/css/04_table_03_isv.css
+++ b/docs/css/04_table_03_isv.css
@@ -123,7 +123,7 @@ td img {
 .appver p:nth-child(n+2) {
     padding-left: 32px;
     position: relative;
-    margin-top: var(--space-m);
+    margin: var(--space-m) 0 0;
 }
 
 .appver p:nth-child(n+2)::before {
@@ -134,7 +134,7 @@ td img {
     width: 24px;
     top: -5px;
     left: 0;
-    background-color: var(--sw-16);
+    background-color: var(--nv-16);
     border-radius: 999px;
     font-family: "material icons";
     font-size: 14px;
@@ -162,7 +162,7 @@ td li {
 .transparent td {
     padding: 0;
     height: 8px;
-    background-color: white;
+    background-color: var(--nv-16);
 }
 
 
