--- a/docs/03_typography/css/typedisplay.css
+++ b/docs/03_typography/css/typedisplay.css
@@ -122,11 +122,11 @@ main > ul > li {
     }
 
     .viewport:nth-of-type(3)::before {
-        content: 'tablet_android';
+        content: 'laptop_mac';
     }
 
     .viewport:nth-of-type(4)::before {
-        content: 'smartphone';
+        content: 'phone_android';
     }
 
     .class {
@@ -147,7 +147,7 @@ main > ul > li {
     font-size: 15px;
     font-weight: 500;
     line-height: 1.5;
-    color: #9d0000;
+    color: #FF00FF;
     margin-bottom: 24px;
     display: flex;
     flex-wrap: wrap;
@@ -155,7 +155,7 @@ main > ul > li {
 }
 
 .specs li {
-    flex: 1 0 180px;
+    flex: 1 0 160px;
 }
 
 .specs li::before {
@@ -174,6 +174,9 @@ main > ul > li {
 
 .specs li:nth-child(4)::before {
     content: 'Margin:';
+}
+.specs li:nth-child(4) {
+    display: none;
 }
 
 @media screen and (min-width: 440px) and (max-width: 767px),
@@ -203,7 +206,7 @@ screen and (min-width: 2400px) {
         flex: 0 0 auto;
     }
 
-    .specs li:nth-child(-n + 3)::after {
+    .specs li:nth-child(-n + 2)::after {
         content: "/";
         color: var(--nv-9-5-99);
         margin: 0 12px;
