--- a/docs/css/01_type_color.css
+++ b/docs/css/01_type_color.css
@@ -43,13 +43,16 @@
 --nv-16: #ffffff;
 --nv-15-5-f7: #F7F7F7;
 --nv-15-ee: #EEEEEE;
+--nv-14-dd: #dddddd;
 --nv-12-5-cc: #CCCCCC;
 --nv-9-5-99: #999999;
 --nv-6-5-66: #666666;
+--nv-3-33: #333333;
+--nv-2-22: #222222;
 --nv-1-5-1a: #1A1A1A;
 --nv-1-11: #111111;
---nv-green: #76B900;
 --nv-0: #000000;
+--nv-green: #76B900;
 }
 
 /*==========  text custom properties  ==========*/
