--- a/docs/css/00_fonts.css
+++ b/docs/css/00_fonts.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: 'dinp';
   font-style: normal;
@@ -40,6 +41,7 @@
   font-display: swap;
   src: url(fonts/DINWebPro-BoldIta.woff) format('woff');
 }
+*/
 
 @font-face {
   font-family: 'nvsans';
@@ -96,4 +98,23 @@
   font-weight: 700;
   font-display: swap;
   src: url(fonts/NVIDIASans_W_BdIt.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'nomo';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/notosansmono/v20/BngcUXNETWXI6LwhGYvaxZikqZqK6fBq6kPvUce2oAZ2evCj.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'nomo';
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/notosansmono/v20/BngcUXNETWXI6LwhGYvaxZikqZqK6fBq6kPvUce2oAZ2evCj.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
