--- a/docs/css/04_table_02_vgpu.css
+++ b/docs/css/04_table_02_vgpu.css
@@ -23,10 +23,6 @@
 }
 
 /*=========== base ===========*/
-main {
-    margin-top: 128px;
-    margin-bottom: 128px;
-}
 
 .wrapper > :nth-child(n + 2) {
     margin-top: 32px;
@@ -73,7 +69,7 @@ thead tr:first-child th:first-child {
     text-align: left;
 }
 
-.center {
+thead .center {
     border-bottom: 1px solid var(--nv-9-5-99);
 }
 
