--- a/docs/css/03_component.css
+++ b/docs/css/03_component.css
@@ -70,6 +70,7 @@
     font-size: var(--nv-cta-small-font-size);
     position: relative;
     line-height: 1;
+    cursor: pointer;
 }
 }
 /*=================== search ===================*/
